[package]
name = "font-rasterizer"
version = "1.0.0"
edition = "2021"

[dependencies]
eframe = "0.30.0"
fontdue = "0.9.2"
png = "0.17.13"
rfd = "0.15.2"
egui_extras = {version = "0.30.0", features = ["all_loaders"]}
image = {version = "0.25.5", features = ["png"]}

[build-dependencies]
winresource = "0.1.19"
