[package]
name = "font-rasterizer"
version = "1.0.0"
edition = "2021"

[dependencies]
eframe = "0.31.1"
fontdue = "0.9.3"
png = "0.17.13"
rfd = "0.15.3"
egui_extras = {version = "0.31.1", features = ["all_loaders"]}
image = {version = "0.25.6", features = ["png"]}

[build-dependencies]
winresource = "0.1.20"
